[package]
name = "rebased-stardust-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bcs = "0.1.6"
derive_more = { version = "1.0.0", features = ["into", "from"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
iota-types = { git = "https://github.com/iotaledger/iota.git", tag = "v0.7.2-rc", version = "0.7.2-rc" }
num_enum = "0.7.3"

[dev-dependencies]
iota-types = { git = "https://github.com/iotaledger/iota.git", tag = "v0.7.2-rc", version = "0.7.2-rc", features = ["test-utils"]}
