[package]
name = "rebased-stardust-indexer"
version = "0.5.4"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
bcs = "0.1.6"
clap = { version = "4.5.21", features = ["derive", "env"] }
derive_more = { version = "1.0.0", features = ["into", "from"] }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }

dotenvy = "0.15"
http = "1.2.0"
iota-types = { git = "https://github.com/iotaledger/iota.git", tag = "v1.16.0-alpha", version = "1.16.0-alpha" }
iota-data-ingestion-core = { git = "https://github.com/iotaledger/iota.git", tag = "v1.16.0-alpha", version = "1.16.0-alpha" }
num_enum = "0.7.3"
prometheus = "0.14.0"
serde = "1.0.215"
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1.48", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7.13"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = "0.3.22"
url = "2.5.4"
utoipa = "5.2.0"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }

[dev-dependencies]
reqwest = "0.12.12"
